// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventInfo /> should render Footer correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventDetails
    event={
      Object {
        "date": "2018-12-06",
        "description": "awesome",
        "image": "image.png",
        "title": "evento",
        "type": "wedding",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="space"
      >
        <div
          className="container"
          style={
            Object {
              "marginTop": 99,
            }
          }
        >
          <h2
            className="mb-5 font-weight-bold  text-center"
          >
            evento
          </h2>
          <div
            className="row"
          >
            <div
              className="col-xl-6 mb-4"
            >
              <div
                className="card prev"
              >
                <img
                  alt="Card image cap"
                  className="img-fluid equal"
                  src="image.png"
                />
              </div>
            </div>
            <div
              className="col-xl-6 text-justify"
            >
              <div
                className="row mb-5"
              >
                <div
                  className="col-xl-4"
                >
                  <p
                    className="mb-2 font-weight-bold "
                  >
                    evento
                  </p>
                </div>
                <div
                  className="col-xl-4"
                >
                  <p
                    className="font-weight-bold"
                  >
                    Type: 
                    wedding
                  </p>
                </div>
                <div
                  className="col-xl-4"
                >
                  <h6
                    className="font-weight-bold"
                  >
                    Date: 
                    2018-12-06
                  </h6>
                </div>
              </div>
              <p
                className="text-center font-weight-bold"
              >
                Description
              </p>
              <p
                className="font-weight-bold"
              >
                awesome
              </p>
            </div>
          </div>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
          style={
            Object {
              "marginTop": 99,
            }
          }
        >
          <h2
            className="mb-5 font-weight-bold  text-center"
          >
            evento
          </h2>
          <div
            className="row"
          >
            <div
              className="col-xl-6 mb-4"
            >
              <div
                className="card prev"
              >
                <img
                  alt="Card image cap"
                  className="img-fluid equal"
                  src="image.png"
                />
              </div>
            </div>
            <div
              className="col-xl-6 text-justify"
            >
              <div
                className="row mb-5"
              >
                <div
                  className="col-xl-4"
                >
                  <p
                    className="mb-2 font-weight-bold "
                  >
                    evento
                  </p>
                </div>
                <div
                  className="col-xl-4"
                >
                  <p
                    className="font-weight-bold"
                  >
                    Type: 
                    wedding
                  </p>
                </div>
                <div
                  className="col-xl-4"
                >
                  <h6
                    className="font-weight-bold"
                  >
                    Date: 
                    2018-12-06
                  </h6>
                </div>
              </div>
              <p
                className="text-center font-weight-bold"
              >
                Description
              </p>
              <p
                className="font-weight-bold"
              >
                awesome
              </p>
            </div>
          </div>
        </div>,
        "className": "space",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-5 font-weight-bold  text-center"
            >
              evento
            </h2>,
            <div
              className="row"
            >
              <div
                className="col-xl-6 mb-4"
              >
                <div
                  className="card prev"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid equal"
                    src="image.png"
                  />
                </div>
              </div>
              <div
                className="col-xl-6 text-justify"
              >
                <div
                  className="row mb-5"
                >
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="mb-2 font-weight-bold "
                    >
                      evento
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="font-weight-bold"
                    >
                      Type: 
                      wedding
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <h6
                      className="font-weight-bold"
                    >
                      Date: 
                      2018-12-06
                    </h6>
                  </div>
                </div>
                <p
                  className="text-center font-weight-bold"
                >
                  Description
                </p>
                <p
                  className="font-weight-bold"
                >
                  awesome
                </p>
              </div>
            </div>,
          ],
          "className": "container",
          "style": Object {
            "marginTop": 99,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "evento",
              "className": "mb-5 font-weight-bold  text-center",
            },
            "ref": null,
            "rendered": "evento",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-xl-6 mb-4"
                >
                  <div
                    className="card prev"
                  >
                    <img
                      alt="Card image cap"
                      className="img-fluid equal"
                      src="image.png"
                    />
                  </div>
                </div>,
                <div
                  className="col-xl-6 text-justify"
                >
                  <div
                    className="row mb-5"
                  >
                    <div
                      className="col-xl-4"
                    >
                      <p
                        className="mb-2 font-weight-bold "
                      >
                        evento
                      </p>
                    </div>
                    <div
                      className="col-xl-4"
                    >
                      <p
                        className="font-weight-bold"
                      >
                        Type: 
                        wedding
                      </p>
                    </div>
                    <div
                      className="col-xl-4"
                    >
                      <h6
                        className="font-weight-bold"
                      >
                        Date: 
                        2018-12-06
                      </h6>
                    </div>
                  </div>
                  <p
                    className="text-center font-weight-bold"
                  >
                    Description
                  </p>
                  <p
                    className="font-weight-bold"
                  >
                    awesome
                  </p>
                </div>,
              ],
              "className": "row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card prev"
                  >
                    <img
                      alt="Card image cap"
                      className="img-fluid equal"
                      src="image.png"
                    />
                  </div>,
                  "className": "col-xl-6 mb-4",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <img
                      alt="Card image cap"
                      className="img-fluid equal"
                      src="image.png"
                    />,
                    "className": "card prev",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "Card image cap",
                      "className": "img-fluid equal",
                      "src": "image.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  "type": "div",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="row mb-5"
                    >
                      <div
                        className="col-xl-4"
                      >
                        <p
                          className="mb-2 font-weight-bold "
                        >
                          evento
                        </p>
                      </div>
                      <div
                        className="col-xl-4"
                      >
                        <p
                          className="font-weight-bold"
                        >
                          Type: 
                          wedding
                        </p>
                      </div>
                      <div
                        className="col-xl-4"
                      >
                        <h6
                          className="font-weight-bold"
                        >
                          Date: 
                          2018-12-06
                        </h6>
                      </div>
                    </div>,
                    <p
                      className="text-center font-weight-bold"
                    >
                      Description
                    </p>,
                    <p
                      className="font-weight-bold"
                    >
                      awesome
                    </p>,
                  ],
                  "className": "col-xl-6 text-justify",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div
                          className="col-xl-4"
                        >
                          <p
                            className="mb-2 font-weight-bold "
                          >
                            evento
                          </p>
                        </div>,
                        <div
                          className="col-xl-4"
                        >
                          <p
                            className="font-weight-bold"
                          >
                            Type: 
                            wedding
                          </p>
                        </div>,
                        <div
                          className="col-xl-4"
                        >
                          <h6
                            className="font-weight-bold"
                          >
                            Date: 
                            2018-12-06
                          </h6>
                        </div>,
                      ],
                      "className": "row mb-5",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <p
                            className="mb-2 font-weight-bold "
                          >
                            evento
                          </p>,
                          "className": "col-xl-4",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "evento",
                            "className": "mb-2 font-weight-bold ",
                          },
                          "ref": null,
                          "rendered": "evento",
                          "type": "p",
                        },
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <p
                            className="font-weight-bold"
                          >
                            Type: 
                            wedding
                          </p>,
                          "className": "col-xl-4",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Type: ",
                              "wedding",
                            ],
                            "className": "font-weight-bold",
                          },
                          "ref": null,
                          "rendered": Array [
                            "Type: ",
                            "wedding",
                          ],
                          "type": "p",
                        },
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <h6
                            className="font-weight-bold"
                          >
                            Date: 
                            2018-12-06
                          </h6>,
                          "className": "col-xl-4",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Date: ",
                              "2018-12-06",
                            ],
                            "className": "font-weight-bold",
                          },
                          "ref": null,
                          "rendered": Array [
                            "Date: ",
                            "2018-12-06",
                          ],
                          "type": "h6",
                        },
                        "type": "div",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Description",
                      "className": "text-center font-weight-bold",
                    },
                    "ref": null,
                    "rendered": "Description",
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "awesome",
                      "className": "font-weight-bold",
                    },
                    "ref": null,
                    "rendered": "awesome",
                    "type": "p",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="space"
        >
          <div
            className="container"
            style={
              Object {
                "marginTop": 99,
              }
            }
          >
            <h2
              className="mb-5 font-weight-bold  text-center"
            >
              evento
            </h2>
            <div
              className="row"
            >
              <div
                className="col-xl-6 mb-4"
              >
                <div
                  className="card prev"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid equal"
                    src="image.png"
                  />
                </div>
              </div>
              <div
                className="col-xl-6 text-justify"
              >
                <div
                  className="row mb-5"
                >
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="mb-2 font-weight-bold "
                    >
                      evento
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="font-weight-bold"
                    >
                      Type: 
                      wedding
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <h6
                      className="font-weight-bold"
                    >
                      Date: 
                      2018-12-06
                    </h6>
                  </div>
                </div>
                <p
                  className="text-center font-weight-bold"
                >
                  Description
                </p>
                <p
                  className="font-weight-bold"
                >
                  awesome
                </p>
              </div>
            </div>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="container"
            style={
              Object {
                "marginTop": 99,
              }
            }
          >
            <h2
              className="mb-5 font-weight-bold  text-center"
            >
              evento
            </h2>
            <div
              className="row"
            >
              <div
                className="col-xl-6 mb-4"
              >
                <div
                  className="card prev"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid equal"
                    src="image.png"
                  />
                </div>
              </div>
              <div
                className="col-xl-6 text-justify"
              >
                <div
                  className="row mb-5"
                >
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="mb-2 font-weight-bold "
                    >
                      evento
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <p
                      className="font-weight-bold"
                    >
                      Type: 
                      wedding
                    </p>
                  </div>
                  <div
                    className="col-xl-4"
                  >
                    <h6
                      className="font-weight-bold"
                    >
                      Date: 
                      2018-12-06
                    </h6>
                  </div>
                </div>
                <p
                  className="text-center font-weight-bold"
                >
                  Description
                </p>
                <p
                  className="font-weight-bold"
                >
                  awesome
                </p>
              </div>
            </div>
          </div>,
          "className": "space",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2
                className="mb-5 font-weight-bold  text-center"
              >
                evento
              </h2>,
              <div
                className="row"
              >
                <div
                  className="col-xl-6 mb-4"
                >
                  <div
                    className="card prev"
                  >
                    <img
                      alt="Card image cap"
                      className="img-fluid equal"
                      src="image.png"
                    />
                  </div>
                </div>
                <div
                  className="col-xl-6 text-justify"
                >
                  <div
                    className="row mb-5"
                  >
                    <div
                      className="col-xl-4"
                    >
                      <p
                        className="mb-2 font-weight-bold "
                      >
                        evento
                      </p>
                    </div>
                    <div
                      className="col-xl-4"
                    >
                      <p
                        className="font-weight-bold"
                      >
                        Type: 
                        wedding
                      </p>
                    </div>
                    <div
                      className="col-xl-4"
                    >
                      <h6
                        className="font-weight-bold"
                      >
                        Date: 
                        2018-12-06
                      </h6>
                    </div>
                  </div>
                  <p
                    className="text-center font-weight-bold"
                  >
                    Description
                  </p>
                  <p
                    className="font-weight-bold"
                  >
                    awesome
                  </p>
                </div>
              </div>,
            ],
            "className": "container",
            "style": Object {
              "marginTop": 99,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "evento",
                "className": "mb-5 font-weight-bold  text-center",
              },
              "ref": null,
              "rendered": "evento",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="col-xl-6 mb-4"
                  >
                    <div
                      className="card prev"
                    >
                      <img
                        alt="Card image cap"
                        className="img-fluid equal"
                        src="image.png"
                      />
                    </div>
                  </div>,
                  <div
                    className="col-xl-6 text-justify"
                  >
                    <div
                      className="row mb-5"
                    >
                      <div
                        className="col-xl-4"
                      >
                        <p
                          className="mb-2 font-weight-bold "
                        >
                          evento
                        </p>
                      </div>
                      <div
                        className="col-xl-4"
                      >
                        <p
                          className="font-weight-bold"
                        >
                          Type: 
                          wedding
                        </p>
                      </div>
                      <div
                        className="col-xl-4"
                      >
                        <h6
                          className="font-weight-bold"
                        >
                          Date: 
                          2018-12-06
                        </h6>
                      </div>
                    </div>
                    <p
                      className="text-center font-weight-bold"
                    >
                      Description
                    </p>
                    <p
                      className="font-weight-bold"
                    >
                      awesome
                    </p>
                  </div>,
                ],
                "className": "row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <div
                      className="card prev"
                    >
                      <img
                        alt="Card image cap"
                        className="img-fluid equal"
                        src="image.png"
                      />
                    </div>,
                    "className": "col-xl-6 mb-4",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <img
                        alt="Card image cap"
                        className="img-fluid equal"
                        src="image.png"
                      />,
                      "className": "card prev",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "Card image cap",
                        "className": "img-fluid equal",
                        "src": "image.png",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    "type": "div",
                  },
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="row mb-5"
                      >
                        <div
                          className="col-xl-4"
                        >
                          <p
                            className="mb-2 font-weight-bold "
                          >
                            evento
                          </p>
                        </div>
                        <div
                          className="col-xl-4"
                        >
                          <p
                            className="font-weight-bold"
                          >
                            Type: 
                            wedding
                          </p>
                        </div>
                        <div
                          className="col-xl-4"
                        >
                          <h6
                            className="font-weight-bold"
                          >
                            Date: 
                            2018-12-06
                          </h6>
                        </div>
                      </div>,
                      <p
                        className="text-center font-weight-bold"
                      >
                        Description
                      </p>,
                      <p
                        className="font-weight-bold"
                      >
                        awesome
                      </p>,
                    ],
                    "className": "col-xl-6 text-justify",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <div
                            className="col-xl-4"
                          >
                            <p
                              className="mb-2 font-weight-bold "
                            >
                              evento
                            </p>
                          </div>,
                          <div
                            className="col-xl-4"
                          >
                            <p
                              className="font-weight-bold"
                            >
                              Type: 
                              wedding
                            </p>
                          </div>,
                          <div
                            className="col-xl-4"
                          >
                            <h6
                              className="font-weight-bold"
                            >
                              Date: 
                              2018-12-06
                            </h6>
                          </div>,
                        ],
                        "className": "row mb-5",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <p
                              className="mb-2 font-weight-bold "
                            >
                              evento
                            </p>,
                            "className": "col-xl-4",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "evento",
                              "className": "mb-2 font-weight-bold ",
                            },
                            "ref": null,
                            "rendered": "evento",
                            "type": "p",
                          },
                          "type": "div",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <p
                              className="font-weight-bold"
                            >
                              Type: 
                              wedding
                            </p>,
                            "className": "col-xl-4",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                "Type: ",
                                "wedding",
                              ],
                              "className": "font-weight-bold",
                            },
                            "ref": null,
                            "rendered": Array [
                              "Type: ",
                              "wedding",
                            ],
                            "type": "p",
                          },
                          "type": "div",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <h6
                              className="font-weight-bold"
                            >
                              Date: 
                              2018-12-06
                            </h6>,
                            "className": "col-xl-4",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                "Date: ",
                                "2018-12-06",
                              ],
                              "className": "font-weight-bold",
                            },
                            "ref": null,
                            "rendered": Array [
                              "Date: ",
                              "2018-12-06",
                            ],
                            "type": "h6",
                          },
                          "type": "div",
                        },
                      ],
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Description",
                        "className": "text-center font-weight-bold",
                      },
                      "ref": null,
                      "rendered": "Description",
                      "type": "p",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "awesome",
                        "className": "font-weight-bold",
                      },
                      "ref": null,
                      "rendered": "awesome",
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<PopularEvents /> should render Footer correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PopularEvents
    events={
      Object {
        "event": Array [
          Object {
            "date": "2018-12-06",
            "description": "awesome",
            "image": "image.png",
            "title": "evento",
            "type": "wedding",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        id="events"
      >
        <h2
          className="mb-3 slot text-center font-weight-bold"
        >
          Latest Events
        </h2>
        <div
          className="row mb-4"
        >
          <div
            className="col-md-4 mb-4"
          >
            <div
              className="card hoverable text-center"
            >
              <img
                alt="Card image cap"
                className="img-fluid hoverable max"
                src="image.png"
              />
              <div
                className="card-body"
              >
                <h4
                  className="card-title"
                >
                   
                  evento
                </h4>
                <p
                  className="card-text"
                >
                  awesome
                </p>
                <p
                  className="card-text"
                >
                  Date: 
                  2018-12-06
                </p>
                <button
                  className="btn btn-mycolor btn-sm"
                  id="viewEvent"
                >
                  <Link
                    replace={false}
                    to="/events/undefined"
                  >
                    Details
                  </Link>
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>,
      "className": "container space",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="mb-3 slot text-center font-weight-bold"
          >
            Latest Events
          </h2>,
          <div
            className="row mb-4"
          >
            <div
              className="col-md-4 mb-4"
            >
              <div
                className="card hoverable text-center"
              >
                <img
                  alt="Card image cap"
                  className="img-fluid hoverable max"
                  src="image.png"
                />
                <div
                  className="card-body"
                >
                  <h4
                    className="card-title"
                  >
                     
                    evento
                  </h4>
                  <p
                    className="card-text"
                  >
                    awesome
                  </p>
                  <p
                    className="card-text"
                  >
                    Date: 
                    2018-12-06
                  </p>
                  <button
                    className="btn btn-mycolor btn-sm"
                    id="viewEvent"
                  >
                    <Link
                      replace={false}
                      to="/events/undefined"
                    >
                      Details
                    </Link>
                  </button>
                </div>
              </div>
            </div>
          </div>,
        ],
        "id": "events",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Latest Events",
            "className": "mb-3 slot text-center font-weight-bold",
          },
          "ref": null,
          "rendered": "Latest Events",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-md-4 mb-4"
              >
                <div
                  className="card hoverable text-center"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid hoverable max"
                    src="image.png"
                  />
                  <div
                    className="card-body"
                  >
                    <h4
                      className="card-title"
                    >
                       
                      evento
                    </h4>
                    <p
                      className="card-text"
                    >
                      awesome
                    </p>
                    <p
                      className="card-text"
                    >
                      Date: 
                      2018-12-06
                    </p>
                    <button
                      className="btn btn-mycolor btn-sm"
                      id="viewEvent"
                    >
                      <Link
                        replace={false}
                        to="/events/undefined"
                      >
                        Details
                      </Link>
                    </button>
                  </div>
                </div>
              </div>,
            ],
            "className": "row mb-4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="card hoverable text-center"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid hoverable max"
                    src="image.png"
                  />
                  <div
                    className="card-body"
                  >
                    <h4
                      className="card-title"
                    >
                       
                      evento
                    </h4>
                    <p
                      className="card-text"
                    >
                      awesome
                    </p>
                    <p
                      className="card-text"
                    >
                      Date: 
                      2018-12-06
                    </p>
                    <button
                      className="btn btn-mycolor btn-sm"
                      id="viewEvent"
                    >
                      <Link
                        replace={false}
                        to="/events/undefined"
                      >
                        Details
                      </Link>
                    </button>
                  </div>
                </div>,
                "className": "col-md-4 mb-4",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <img
                      alt="Card image cap"
                      className="img-fluid hoverable max"
                      src="image.png"
                    />,
                    <div
                      className="card-body"
                    >
                      <h4
                        className="card-title"
                      >
                         
                        evento
                      </h4>
                      <p
                        className="card-text"
                      >
                        awesome
                      </p>
                      <p
                        className="card-text"
                      >
                        Date: 
                        2018-12-06
                      </p>
                      <button
                        className="btn btn-mycolor btn-sm"
                        id="viewEvent"
                      >
                        <Link
                          replace={false}
                          to="/events/undefined"
                        >
                          Details
                        </Link>
                      </button>
                    </div>,
                  ],
                  "className": "card hoverable text-center",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "alt": "Card image cap",
                      "className": "img-fluid hoverable max",
                      "src": "image.png",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "img",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h4
                          className="card-title"
                        >
                           
                          evento
                        </h4>,
                        <p
                          className="card-text"
                        >
                          awesome
                        </p>,
                        <p
                          className="card-text"
                        >
                          Date: 
                          2018-12-06
                        </p>,
                        <button
                          className="btn btn-mycolor btn-sm"
                          id="viewEvent"
                        >
                          <Link
                            replace={false}
                            to="/events/undefined"
                          >
                            Details
                          </Link>
                        </button>,
                      ],
                      "className": "card-body",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " ",
                            "evento",
                          ],
                          "className": "card-title",
                        },
                        "ref": null,
                        "rendered": Array [
                          " ",
                          "evento",
                        ],
                        "type": "h4",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "awesome",
                          "className": "card-text",
                        },
                        "ref": null,
                        "rendered": "awesome",
                        "type": "p",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            "Date: ",
                            "2018-12-06",
                          ],
                          "className": "card-text",
                        },
                        "ref": null,
                        "rendered": Array [
                          "Date: ",
                          "2018-12-06",
                        ],
                        "type": "p",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <Link
                            replace={false}
                            to="/events/undefined"
                          >
                            Details
                          </Link>,
                          "className": "btn btn-mycolor btn-sm",
                          "data-centerid": undefined,
                          "id": "viewEvent",
                          "onClick": undefined,
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": "Details",
                            "replace": false,
                            "to": "/events/undefined",
                          },
                          "ref": null,
                          "rendered": "Details",
                          "type": [Function],
                        },
                        "type": "button",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          id="events"
        >
          <h2
            className="mb-3 slot text-center font-weight-bold"
          >
            Latest Events
          </h2>
          <div
            className="row mb-4"
          >
            <div
              className="col-md-4 mb-4"
            >
              <div
                className="card hoverable text-center"
              >
                <img
                  alt="Card image cap"
                  className="img-fluid hoverable max"
                  src="image.png"
                />
                <div
                  className="card-body"
                >
                  <h4
                    className="card-title"
                  >
                     
                    evento
                  </h4>
                  <p
                    className="card-text"
                  >
                    awesome
                  </p>
                  <p
                    className="card-text"
                  >
                    Date: 
                    2018-12-06
                  </p>
                  <button
                    className="btn btn-mycolor btn-sm"
                    id="viewEvent"
                  >
                    <Link
                      replace={false}
                      to="/events/undefined"
                    >
                      Details
                    </Link>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </section>,
        "className": "container space",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2
              className="mb-3 slot text-center font-weight-bold"
            >
              Latest Events
            </h2>,
            <div
              className="row mb-4"
            >
              <div
                className="col-md-4 mb-4"
              >
                <div
                  className="card hoverable text-center"
                >
                  <img
                    alt="Card image cap"
                    className="img-fluid hoverable max"
                    src="image.png"
                  />
                  <div
                    className="card-body"
                  >
                    <h4
                      className="card-title"
                    >
                       
                      evento
                    </h4>
                    <p
                      className="card-text"
                    >
                      awesome
                    </p>
                    <p
                      className="card-text"
                    >
                      Date: 
                      2018-12-06
                    </p>
                    <button
                      className="btn btn-mycolor btn-sm"
                      id="viewEvent"
                    >
                      <Link
                        replace={false}
                        to="/events/undefined"
                      >
                        Details
                      </Link>
                    </button>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "id": "events",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Latest Events",
              "className": "mb-3 slot text-center font-weight-bold",
            },
            "ref": null,
            "rendered": "Latest Events",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-md-4 mb-4"
                >
                  <div
                    className="card hoverable text-center"
                  >
                    <img
                      alt="Card image cap"
                      className="img-fluid hoverable max"
                      src="image.png"
                    />
                    <div
                      className="card-body"
                    >
                      <h4
                        className="card-title"
                      >
                         
                        evento
                      </h4>
                      <p
                        className="card-text"
                      >
                        awesome
                      </p>
                      <p
                        className="card-text"
                      >
                        Date: 
                        2018-12-06
                      </p>
                      <button
                        className="btn btn-mycolor btn-sm"
                        id="viewEvent"
                      >
                        <Link
                          replace={false}
                          to="/events/undefined"
                        >
                          Details
                        </Link>
                      </button>
                    </div>
                  </div>
                </div>,
              ],
              "className": "row mb-4",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="card hoverable text-center"
                  >
                    <img
                      alt="Card image cap"
                      className="img-fluid hoverable max"
                      src="image.png"
                    />
                    <div
                      className="card-body"
                    >
                      <h4
                        className="card-title"
                      >
                         
                        evento
                      </h4>
                      <p
                        className="card-text"
                      >
                        awesome
                      </p>
                      <p
                        className="card-text"
                      >
                        Date: 
                        2018-12-06
                      </p>
                      <button
                        className="btn btn-mycolor btn-sm"
                        id="viewEvent"
                      >
                        <Link
                          replace={false}
                          to="/events/undefined"
                        >
                          Details
                        </Link>
                      </button>
                    </div>
                  </div>,
                  "className": "col-md-4 mb-4",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <img
                        alt="Card image cap"
                        className="img-fluid hoverable max"
                        src="image.png"
                      />,
                      <div
                        className="card-body"
                      >
                        <h4
                          className="card-title"
                        >
                           
                          evento
                        </h4>
                        <p
                          className="card-text"
                        >
                          awesome
                        </p>
                        <p
                          className="card-text"
                        >
                          Date: 
                          2018-12-06
                        </p>
                        <button
                          className="btn btn-mycolor btn-sm"
                          id="viewEvent"
                        >
                          <Link
                            replace={false}
                            to="/events/undefined"
                          >
                            Details
                          </Link>
                        </button>
                      </div>,
                    ],
                    "className": "card hoverable text-center",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "Card image cap",
                        "className": "img-fluid hoverable max",
                        "src": "image.png",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <h4
                            className="card-title"
                          >
                             
                            evento
                          </h4>,
                          <p
                            className="card-text"
                          >
                            awesome
                          </p>,
                          <p
                            className="card-text"
                          >
                            Date: 
                            2018-12-06
                          </p>,
                          <button
                            className="btn btn-mycolor btn-sm"
                            id="viewEvent"
                          >
                            <Link
                              replace={false}
                              to="/events/undefined"
                            >
                              Details
                            </Link>
                          </button>,
                        ],
                        "className": "card-body",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              " ",
                              "evento",
                            ],
                            "className": "card-title",
                          },
                          "ref": null,
                          "rendered": Array [
                            " ",
                            "evento",
                          ],
                          "type": "h4",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "awesome",
                            "className": "card-text",
                          },
                          "ref": null,
                          "rendered": "awesome",
                          "type": "p",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              "Date: ",
                              "2018-12-06",
                            ],
                            "className": "card-text",
                          },
                          "ref": null,
                          "rendered": Array [
                            "Date: ",
                            "2018-12-06",
                          ],
                          "type": "p",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <Link
                              replace={false}
                              to="/events/undefined"
                            >
                              Details
                            </Link>,
                            "className": "btn btn-mycolor btn-sm",
                            "data-centerid": undefined,
                            "id": "viewEvent",
                            "onClick": undefined,
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "class",
                            "props": Object {
                              "children": "Details",
                              "replace": false,
                              "to": "/events/undefined",
                            },
                            "ref": null,
                            "rendered": "Details",
                            "type": [Function],
                          },
                          "type": "button",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
